<resources>
    <string name="app_name">Popular Movies</string>
    <string name="movie_title">Movie Title</string>
    <string name="image">Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="movie_details"> Movie Details</string>
    <string name="movie_popular">Popular Movies</string>
    <string name="movie_rating">Top Rated Movies</string>
    <string name="movie_favorites">Favorite Movies</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="internet_connection_not_available">Internet Connection Not Available!</string>
    <string name="byPopularity">Popularity</string>
    <string name="byRating">Rating</string>
    <string name="byFavorite">Favorites</string>
    <string name="retry">Retry</string>
    <string name="movie_name">Movie Name</string>
    <string name="default_date">2016-03-23</string>
    <string name="default_release_date">release date</string>
    <string name="default_movie_title">Movie Title</string>
    <string name="youtube_player_error">Error initializing YouTube player</string>
    <string name="movie_vote_average">%s/10</string>
    <string name="overview">overview</string>
    <string name="rating">rating</string>
    <string name="trailer">Trailer</string>

</resources>
