<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailsCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Movies.MovieDetails">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/imageLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/moviePosterImage"
                    android:layout_width="160dp"
                    android:layout_height="200dp"
                    android:foregroundGravity="center"
                    android:scaleType="centerCrop"
                    tools:background="@mipmap/ic_launcher" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/floatingActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="69dp"
                    android:layout_marginStart="69dp"
                    android:layout_toEndOf="@+id/moviePosterImage"
                    android:layout_toRightOf="@+id/moviePosterImage"
                    app:elevation="4dp"
                    app:layout_anchorGravity="center"
                    app:pressedTranslationZ="8dp"
                    app:rippleColor="@android:color/holo_orange_dark" />


            </RelativeLayout>

            <View
                android:id="@+id/action_divider"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/colorDividerLight" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="5dp"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/detailMovieTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/primaryText"
                    android:textSize="20sp"
                    tools:text="@string/default_movie_title" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/colorDividerLight" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingTop="12dp"
                    android:text="@string/default_release_date"
                    android:textColor="@color/primaryText"
                    android:textSize="18sp" />

                <View
                    android:layout_width="104dp"
                    android:layout_height="2dp"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:id="@+id/movieReleaseDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingTop="10dp"
                    android:textColor="@color/secondaryText"
                    android:textSize="16sp"
                    tools:text="@string/default_date" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingTop="12dp"
                    android:text="@string/rating"
                    android:textColor="@color/primaryText"
                    android:textSize="18sp" />

                <View
                    android:layout_width="46dp"
                    android:layout_height="2dp"
                    android:background="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp"
                    android:paddingTop="@dimen/padding_ten">

                    <RatingBar
                        android:id="@+id/ratingBar"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:hapticFeedbackEnabled="false"
                        android:numStars="10" />

                    <TextView
                        android:id="@+id/movieRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/padding_ten"
                        android:paddingRight="@dimen/padding_ten"
                        android:paddingStart="@dimen/padding_ten"
                        android:textColor="@color/secondaryText"
                        android:textSize="16sp" />

                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingTop="12dp"
                    android:text="@string/overview"
                    android:textColor="@color/primaryText"
                    android:textSize="18sp" />

                <View
                    android:layout_width="73dp"
                    android:layout_height="2dp"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:id="@+id/movieOverview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingTop="10dp"
                    android:textColor="@color/secondaryText"
                    android:textSize="16sp"
                    tools:text="@string/movie_name" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>